--- a/src/Components/SearchContainer/SearchContainer.css
+++ b/src/Components/SearchContainer/SearchContainer.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    max-width: 100%;
     font-size: 13px;
     margin-bottom: 2.125em;
   }
